# MatrixMultiplicationOpenCL

./: .gitignore  CMakeLists.txt  README.md
include/MatrixMultiplicationOpenCL/: matrix.h
kernels/: naive_mult.cl  test_kernel.cl
src/: main.cpp  matrix.cpp
tests/: test.txt
